# Sarvagya

./: .env.example  .gitignore  ANALYSIS.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  opencode.json  pyproject.toml  requirements.txt
.opencode/plugins/: ponytail.mjs
docs/: HLD.md  REVIEW.md  architecture.html
docs/daily_briefings/: morning_report_2026-06-15.txt
sarvagya/: main.py
sarvagya/adapters/llm/: anthropic.py  openai.py
sarvagya/adapters/memory/: filesystem.py
sarvagya/adapters/sandbox/: local.py
sarvagya/adapters/search/: tavily.py
sarvagya/core/: __init__.py  context.py  loop.py  tool_registry.py  tools.py  types.py
sarvagya/core/tools/: __init__.py  bash.py  file_ops.py  search_ops.py  web.py
sarvagya/ports/: llm.py  memory.py  sandbox.py  search.py
sarvagya/prompts/: system.md
services/browser_tool/: Dockerfile  main.py
services/python_repl_tool/: main.py
src/: main.py
src/agents/: planner_agent.py  reporter_agent.py  researcher_agent.py  supervisor_agent.py
src/api/: endpoints.py  schemas.py
src/config/: env.py
src/graph/: state.py  workflow.py
src/llm_services/: __init__.py  base.py  chat.py  registry.py  types.py
src/llm_services/providers/: __init__.py  anthropic_client.py  azure_openai_client.py  gemini_client.py  groq_client.py  mistral_client.py  openai_client.py
src/prompts/: planner.md  supervisor.md
src/tools/: __init__.py  browser_client.py  python_repl_client.py  tavily_search.py
src/utils/: logging.py  prompt_loader.py
tests/: test_agents.py  test_api.py  test_graph.py  test_tools.py
