[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-framework"
version = "0.1.0"
description = "Multi-agent framework aligned with LangManus (FastAPI + LangGraph)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "sse-starlette>=1.6.5",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "langgraph>=0.3.5",
    "langchain>=0.3.7",
    "langchain-openai>=0.3.8",
    "langchain-community>=0.3.19",
    "readabilipy>=0.3.0",
    "markdownify>=1.1.0",
    "browser-use>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.2.0",
  "ruff>=0.5.0",
]

test = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]

